k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: ghcr.io/hexagonicalhq/homepage:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: 3000
